--- a/app/templates/signup.tpl.html
+++ b/app/templates/signup.tpl.html
@@ -1,6 +1,13 @@
-<form class="signup_container">
-  Username <br />
-  <input class="username" name="password" type="text" placeholder="" /><br />
-  Password <br />
-  <input class="password" name="password" type="password" placeholder="" />
-</form>
+<div class="sign-up_container">
+  <form>
+    <div class="input_box">
+      <span class="username_placeholder placeholder">Username</span>  <br />
+      <input class="username_input input" name="password" type="text" placeholder="" /><br />
+      <span class="password_placeholder placeholder">Password</span>  <br />
+      <input class="password_input input" name="password" type="password" placeholder="" /><br />
+    </div>
+    <button class="sign-in_button">Sign-in</button><br />
+    <span class="or">Or</span> <br />
+    <button class="create-account_button"><a href="">Create Account</a></button>
+  </form>
+</div>
