added user.service and AddAccount to main.js

--- a/app/templates/signup.tpl.html
+++ b/app/templates/signup.tpl.html
@@ -8,6 +8,6 @@
     </div>
     <button class="sign-in_button">Sign-in</button><br />
     <span class="or">Or</span> <br />
-    <button class="create-account_button"><a href="">Create Account</a></button>
+    <button class="create-account_button"><a href="/#/add-account">Create Account</a></button>
   </form>
 </div>
