sass for add account page

--- a/app/templates/addAccount.tpl.html
+++ b/app/templates/addAccount.tpl.html
@@ -1,12 +1,12 @@
 <div class="addAccountContainer">
-	<h2 class="addAccountTitle"> Add Account </h2>
-	<form id="addAccountForm">
-		<input type="text" class="firstNameInput" placeholder="First Name" ng-model="user.first_name">
-		<input type="text" class="lastNameInput" placeholder="Last Name" ng-model="user.last_name">
-		<input type="email" class="emailInput" placeholder="Email" ng-model="user.email">
-		<input type="password" class="passwordInput" placeholder="Password" ng-model="user.username">
-		<input type="text" class="usernameInput" placeholder="Username" ng-model="user.username">
-		<input type="text" class="location" placeholder="Location (city, state)" ng-model="user.location">
+	<h2 class="addAccountTitle"> Add Account </h2><br />
+	<form id="addAccountForm" class="addAccountForm">
+		<input type="text" class="firstNameInput add_input" placeholder="First Name" ng-model="user.first_name"><br />
+		<input type="text" class="lastNameInput add_input" placeholder="Last Name" ng-model="user.last_name"><br />
+		<input type="email" class="emailInput add_input" placeholder="Email" ng-model="user.email"><br />
+		<input type="password" class="passwordInput add_input" placeholder="Password" ng-model="user.username"><br />
+		<input type="text" class="usernameInput add_input" placeholder="Username" ng-model="user.username"><br />
+		<input type="text" class="locationInput add_input" placeholder="Location (city, state)" ng-model="user.location"><br />
 		<input type="submit" class="addAccountSubmit">
 	</form>
 </div>
