--- a/app/templates/layout.tpl.html
+++ b/app/templates/layout.tpl.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <a class="home_link link" href="">Home</a>
-  <button class="sign-in_link link"><a class="link" href="/#/sign-in">Sign-in</a></button>
+  <a class="sign-in_link link" href="/#/sign-in">Sign-in</a>
 </nav>
 
 <div class="wrapper" ui-view></div>
