--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -27,9 +27,6 @@ html{
       margin: 0px 10px;
       text-decoration: none;
     }
-    .sign-in_link{
-      border: none;
-    }
   }
 
 
@@ -51,6 +48,7 @@ html{
         .input{
           width: 25%;
           margin-bottom: 20px;
+          padding: 5px;
         }
       }
       .sign-in_button{
@@ -66,6 +64,29 @@ html{
         a{
           text-decoration: none;
         }
+      }
+    }
+  }
+
+
+  .addAccountContainer{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    top: 10%;
+    .addAccountTitle{
+
+    }
+    .addAccountForm{
+      width: 100%;
+      .add_input{
+        width: 25%;
+        margin: 10px;
+        padding: 5px;
+      }
+      .addAccountSubmit{
+
       }
     }
   }
