--- a/app/templates/signup.tpl.html
+++ b/app/templates/signup.tpl.html
@@ -2,11 +2,11 @@
   <form>
     <div class="input_box">
       <span class="username_placeholder placeholder">Username</span>  <br />
-      <input class="username_input input" name="password" type="text" placeholder="" /><br />
+      <input class="username_input input" name="password" type="text" placeholder="Username" ng-model="user.username"/><br />
       <span class="password_placeholder placeholder">Password</span>  <br />
-      <input class="password_input input" name="password" type="password" placeholder="" /><br />
+      <input class="password_input input" name="password" type="password" placeholder="Password" ng-model="user.password" /><br />
     </div>
-    <button class="sign-in_button">Sign-in</button><br />
+    <button class="sign-in_button" ng-click="vm.loginUser(user)">Sign-in</button><br />
     <span class="or">Or</span> <br />
     <button class="create-account_button"><a href="/#/add-account">Create Account</a></button>
   </form>
