--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -89,4 +89,107 @@ html{
       }
     }
   }
+
+
+
+
+  .bracketOfEight{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 10%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    .sideOne{
+      width: 40%;
+      height: 50%;
+      position: relative;
+      margin: 3% 0%;
+      .matchOne{
+        position: absolute;
+        top: 10%;
+        width: 20%;
+        height: 60%;
+        border-right: 1px solid black;
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+      }
+      .matchTwo{
+        position: absolute;
+        top: 90%;
+        width: 20%;
+        height: 60%;
+        border-right: 1px solid black;
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+      }
+      .matchThree{
+        position: absolute;
+        top: 40%;
+        left: 20%;
+        width: 20%;
+        height: 80%;
+        border-right: 1px solid black;
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+      }
+      .sideWinner{
+        position: absolute;
+        top: 80%;
+        left: 40%;
+        width: 20%;
+        border-bottom: 1px solid black;
+      }
+    }
+    .sideTwo{
+      width: 40%;
+      height: 50%;
+      position: relative;
+      margin: 3% 0%;
+      .matchOne{
+        position: absolute;
+        top: 10%;
+        right: 0%;
+        width: 20%;
+        height: 60%;
+        border-left: 1px solid black;
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+      }
+      .matchTwo{
+        position: absolute;
+        top: 90%;
+        right: 0%;
+        width: 20%;
+        height: 60%;
+        border-left: 1px solid black;
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+      }
+      .matchThree{
+        position: absolute;
+        top: 40%;
+        right: 20%;
+        width: 20%;
+        height: 80%;
+        border-left: 1px solid black;
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+      }
+      .sideWinner{
+        position: absolute;
+        top: 80%;
+        right: 40%;
+        width: 20%;
+        border-bottom: 1px solid black;
+      }
+      .tourneyWinner{
+        border-bottom: 1px solid black;
+        top: 80%;
+        left: 35%;
+        width: 20%;
+      }
+    }
+  }
 }
