--- a/app/templates/layout.tpl.html
+++ b/app/templates/layout.tpl.html
@@ -1,6 +1,7 @@
 <nav class="navbar">
   <a class="home_link link" href="">Home</a>
   <a class="sign-in_link link" href="/#/sign-in">Sign-in</a>
+  <a class="tournaments_link link" href="/#/tournaments">Tournaments</a>
 </nav>
 
 <div class="wrapper" ui-view></div>
