--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -193,3 +193,17 @@ html{
     }
   }
 }
+
+.createButton {
+  width: 10%;
+  height: 10%;
+  background: purple;
+  color: white;
+}
+
+.cancelButton {
+  width: 10%;
+  height: 10%;
+  background: gray;
+  color: white;
+}
