styling bracket of eight and placing names in each slot

--- a/app/templates/liveTourney.tpl.html
+++ b/app/templates/liveTourney.tpl.html
@@ -3,28 +3,48 @@
     <div class="matchOne">
 
     </div>
+    <span class="playerOne">TJ</span>
+    <span class="playerTwo">Dom</span>
     <div class="matchTwo">
 
     </div>
+    <span class="playerThree">Brit</span>
+    <span class="playerFour">Ben</span>
     <div class="matchThree">
 
     </div>
+    <span class="matchOneWinner">Dom</span>
+    <span class="matchTwoWinner">Brit</span>
     <div class="sideWinner">
 
     </div>
+    <span class="matchThreeWinner">Dom</span>
+  </div>
+  <div class="winner">
+    <div class="tourneyWinner">
+
+    </div>
+    <span class="champion">Dom</span>
   </div>
   <div class="sideTwo">
     <div class="matchOne">
 
     </div>
+    <span class="playerOne">Terry</span>
+    <span class="playerTwo">Kenny</span>
     <div class="matchTwo">
 
     </div>
+    <span class="playerThree">Josh</span>
+    <span class="playerFour">Will</span>
     <div class="matchThree">
 
     </div>
+    <span class="matchOneWinner">Terry</span>
+    <span class="matchTwoWinner">Will</span>
     <div class="sideWinner">
 
     </div>
+    <span class="matchThreeWinner">Terry</span>
   </div>
 </div>
