--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,8 @@ html{
 .container{
   width: 100%;
   height: 100%;
+  min-width: 800px;
+  min-height: 500px;
   position: relative;
   .navbar{
     width: 100%;
@@ -95,100 +97,206 @@ html{
 
   .bracketOfEight{
     width: 100%;
-    height: 100%;
+    height: 70%;
     position: absolute;
     top: 10%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     .sideOne{
-      width: 40%;
-      height: 50%;
+      width: 35%;
+      height: 100%;
       position: relative;
       margin: 3% 0%;
       .matchOne{
         position: absolute;
-        top: 10%;
+        top: 5%;
         width: 20%;
-        height: 60%;
+        height: 30%;
         border-right: 1px solid black;
         border-top: 1px solid black;
         border-bottom: 1px solid black;
+      }
+      .playerOne{
+        position: absolute;
+        bottom: 95%;
+        width: 20%;
+        text-align: center;
+      }
+      .playerTwo{
+        position: absolute;
+        bottom: 65%;
+        width: 20%;
+        text-align: center;
       }
       .matchTwo{
         position: absolute;
-        top: 90%;
+        top: 65%;
+        width: 20%;
+        height: 30%;
+        border-right: 1px solid black;
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+      }
+      .playerThree{
+        position: absolute;
+        bottom: 35%;
+        width: 20%;
+        text-align: center;
+      }
+      .playerFour{
+        position: absolute;
+        bottom: 5%;
+        width: 20%;
+        text-align: center;
+      }
+      .matchThree{
+        position: absolute;
+        top: 20%;
+        left: 20%;
         width: 20%;
         height: 60%;
         border-right: 1px solid black;
         border-top: 1px solid black;
         border-bottom: 1px solid black;
       }
-      .matchThree{
+      .matchOneWinner{
         position: absolute;
-        top: 40%;
+        bottom: 80%;
         left: 20%;
         width: 20%;
-        height: 80%;
-        border-right: 1px solid black;
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
+        text-align: center;
+      }
+      .matchTwoWinner{
+        position: absolute;
+        bottom: 20%;
+        left: 20%;
+        width: 20%;
+        text-align: center;
       }
       .sideWinner{
         position: absolute;
-        top: 80%;
+        top: 50%;
         left: 40%;
         width: 20%;
         border-bottom: 1px solid black;
       }
+      .matchThreeWinner{
+        position: absolute;
+        bottom: 50%;
+        left: 40%;
+        width: 20%;
+        text-align: center;
+      }
+    }
+    .winner{
+      width: 15%;
+      height: 100%;
+      position: relative;
+      margin: 3% 0%;
+      .tourneyWinner{
+        border-bottom: 1px solid black;
+        position: absolute;
+        top: 50%;
+        width: 100%;
+      }
+      .champion{
+        position: absolute;
+        bottom: 50%;
+        width: 100%;
+        text-align: center;
+      }
     }
     .sideTwo{
-      width: 40%;
-      height: 50%;
+      width: 35%;
+      height: 100%;
       position: relative;
       margin: 3% 0%;
       .matchOne{
         position: absolute;
-        top: 10%;
+        top: 5%;
         right: 0%;
         width: 20%;
-        height: 60%;
+        height: 30%;
         border-left: 1px solid black;
         border-top: 1px solid black;
         border-bottom: 1px solid black;
+      }
+      .playerOne{
+        position: absolute;
+        bottom: 95%;
+        right: 0%;
+        width: 20%;
+        text-align: center;
+      }
+      .playerTwo{
+        position: absolute;
+        bottom: 65%;
+        right: 0%;
+        width: 20%;
+        text-align: center;
       }
       .matchTwo{
         position: absolute;
-        top: 90%;
+        top: 65%;
         right: 0%;
+        width: 20%;
+        height: 30%;
+        border-left: 1px solid black;
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+      }
+      .playerThree{
+        position: absolute;
+        bottom: 35%;
+        right: 0%;
+        width: 20%;
+        text-align: center;
+      }
+      .playerFour{
+        position: absolute;
+        bottom: 5%;
+        right: 0%;
+        width: 20%;
+        text-align: center;
+      }
+      .matchThree{
+        position: absolute;
+        top: 20%;
+        right: 20%;
         width: 20%;
         height: 60%;
         border-left: 1px solid black;
         border-top: 1px solid black;
         border-bottom: 1px solid black;
       }
-      .matchThree{
+      .matchOneWinner{
         position: absolute;
-        top: 40%;
+        bottom: 80%;
         right: 20%;
         width: 20%;
-        height: 80%;
-        border-left: 1px solid black;
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
+        text-align: center;
+      }
+      .matchTwoWinner{
+        position: absolute;
+        bottom: 20%;
+        right: 20%;
+        width: 20%;
+        text-align: center;
       }
       .sideWinner{
         position: absolute;
-        top: 80%;
+        top: 50%;
         right: 40%;
         width: 20%;
         border-bottom: 1px solid black;
       }
-      .tourneyWinner{
-        border-bottom: 1px solid black;
-        top: 80%;
-        left: 35%;
+      .matchThreeWinner{
+        position: absolute;
+        bottom: 50%;
+        right: 40%;
         width: 20%;
+        text-align: center;
       }
     }
   }
