--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -315,3 +315,12 @@ html{
   background: gray;
   color: white;
 }
+
+.tourneyViewInputText{
+  margin-bottom: 5px;
+}
+
+.playerInputs{
+  display: flex;
+  flex-wrap: wrap;
+}
