added bracket of sixteen

--- a/app/templates/liveTourney.tpl.html
+++ b/app/templates/liveTourney.tpl.html
@@ -1,50 +1,144 @@
-<div class="bracketOfEight">
-  <div class="sideOne">
-    <div class="matchOne">
+<div class="liveTourneyView">
+  <div class="bracketOfEight">
+    <div class="sideOne">
+      <div class="matchOne">
 
-    </div>
-    <span class="playerOne">TJ</span>
-    <span class="playerTwo">Dom</span>
-    <div class="matchTwo">
+      </div>
+      <span class="playerOne">TJ</span>
+      <span class="playerTwo">Dom</span>
+      <div class="matchTwo">
 
-    </div>
-    <span class="playerThree">Brit</span>
-    <span class="playerFour">Ben</span>
-    <div class="matchThree">
+      </div>
+      <span class="playerThree">Brit</span>
+      <span class="playerFour">Ben</span>
+      <div class="matchThree">
 
-    </div>
-    <span class="matchOneWinner">Dom</span>
-    <span class="matchTwoWinner">Brit</span>
-    <div class="sideWinner">
+      </div>
+      <span class="matchOneWinner">Dom</span>
+      <span class="matchTwoWinner">Brit</span>
+      <div class="sideWinner">
 
+      </div>
+      <span class="matchThreeWinner">Dom</span>
     </div>
-    <span class="matchThreeWinner">Dom</span>
+    <div class="winner">
+      <div class="tourneyWinner">
+
+      </div>
+      <span class="champion">Dom</span>
+    </div>
+    <div class="sideTwo">
+      <div class="matchOne">
+
+      </div>
+      <span class="playerOne">Terry</span>
+      <span class="playerTwo">Kenny</span>
+      <div class="matchTwo">
+
+      </div>
+      <span class="playerThree">Josh</span>
+      <span class="playerFour">Will</span>
+      <div class="matchThree">
+
+      </div>
+      <span class="matchOneWinner">Terry</span>
+      <span class="matchTwoWinner">Will</span>
+      <div class="sideWinner">
+
+      </div>
+      <span class="matchThreeWinner">Terry</span>
+    </div>
   </div>
-  <div class="winner">
-    <div class="tourneyWinner">
 
-    </div>
-    <span class="champion">Dom</span>
-  </div>
-  <div class="sideTwo">
-    <div class="matchOne">
 
-    </div>
-    <span class="playerOne">Terry</span>
-    <span class="playerTwo">Kenny</span>
-    <div class="matchTwo">
+  <div class="bracketOfSixteen">
+    <div class="sideOne">
+      <div class="matchOne">
 
-    </div>
-    <span class="playerThree">Josh</span>
-    <span class="playerFour">Will</span>
-    <div class="matchThree">
+      </div>
+      <span class="playerOne">Adam</span>
+      <span class="playerTwo">Adam</span>
+      <div class="matchTwo">
 
-    </div>
-    <span class="matchOneWinner">Terry</span>
-    <span class="matchTwoWinner">Will</span>
-    <div class="sideWinner">
+      </div>
+      <span class="playerThree">Adam</span>
+      <span class="playerFour">Adam</span>
+      <div class="matchThree">
 
+      </div>
+      <span class="playerFive">Adam</span>
+      <span class="playerSix">Adam</span>
+      <div class="matchFour">
+
+      </div>
+      <span class="playerSeven">Adam</span>
+      <span class="playerEight">Adam</span>
+      <div class="matchFive">
+
+      </div>
+      <span class="matchOneWinner">Adam</span>
+      <span class="matchTwoWinner">Adam</span>
+      <div class="matchSix">
+
+      </div>
+      <span class="matchThreeWinner">Adam</span>
+      <span class="matchFourWinner">Adam</span>
+      <div class="matchSeven">
+
+      </div>
+      <span class="matchFiveWinner">Adam</span>
+      <span class="matchSixWinner">Adam</span>
+      <div class="sideWinner">
+
+      </div>
+      <span class="matchSevenWinner">Adam</span>
     </div>
-    <span class="matchThreeWinner">Terry</span>
+    <div class="winner">
+      <div class="tourneyWinner">
+
+      </div>
+      <span class="champion">Adam</span>
+    </div>
+    <div class="sideTwo">
+      <div class="matchOne">
+
+      </div>
+      <span class="playerOne">Adam</span>
+      <span class="playerTwo">Adam</span>
+      <div class="matchTwo">
+
+      </div>
+      <span class="playerThree">Adam</span>
+      <span class="playerFour">Adam</span>
+      <div class="matchThree">
+
+      </div>
+      <span class="playerFive">Adam</span>
+      <span class="playerSix">Adam</span>
+      <div class="matchFour">
+
+      </div>
+      <span class="playerSeven">Adam</span>
+      <span class="playerEight">Adam</span>
+      <div class="matchFive">
+
+      </div>
+      <span class="matchOneWinner">Adam</span>
+      <span class="matchTwoWinner">Adam</span>
+      <div class="matchSix">
+
+      </div>
+      <span class="matchThreeWinner">Adam</span>
+      <span class="matchFourWinner">Adam</span>
+      <div class="matchSeven">
+
+      </div>
+      <span class="matchFiveWinner">Adam</span>
+      <span class="matchSixWinner">Adam</span>
+      <div class="sideWinner">
+
+      </div>
+      <span class="matchSevenWinner">Adam</span>
+    </div>
   </div>
 </div>
