--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -93,213 +93,621 @@ html{
   }
 
 
-
-
-  .bracketOfEight{
+  .liveTourneyView{
     width: 100%;
-    height: 70%;
+    height: 100%;
     position: absolute;
     top: 10%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    .sideOne{
-      width: 35%;
-      height: 100%;
-      position: relative;
-      margin: 3% 0%;
-      .matchOne{
-        position: absolute;
-        top: 5%;
-        width: 20%;
-        height: 30%;
-        border-right: 1px solid black;
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
+    .bracketOfEight{
+      width: 100%;
+      height: 70%;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      .sideOne{
+        width: 35%;
+        height: 100%;
+        position: relative;
+        margin: 3% 0%;
+        .matchOne{
+          position: absolute;
+          top: 5%;
+          width: 20%;
+          height: 30%;
+          border-right: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .playerOne{
+          position: absolute;
+          bottom: 95%;
+          width: 20%;
+          text-align: center;
+        }
+        .playerTwo{
+          position: absolute;
+          bottom: 65%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchTwo{
+          position: absolute;
+          top: 65%;
+          width: 20%;
+          height: 30%;
+          border-right: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .playerThree{
+          position: absolute;
+          bottom: 35%;
+          width: 20%;
+          text-align: center;
+        }
+        .playerFour{
+          position: absolute;
+          bottom: 5%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchThree{
+          position: absolute;
+          top: 20%;
+          left: 20%;
+          width: 20%;
+          height: 60%;
+          border-right: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .matchOneWinner{
+          position: absolute;
+          bottom: 80%;
+          left: 20%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchTwoWinner{
+          position: absolute;
+          bottom: 20%;
+          left: 20%;
+          width: 20%;
+          text-align: center;
+        }
+        .sideWinner{
+          position: absolute;
+          top: 50%;
+          left: 40%;
+          width: 20%;
+          border-bottom: 1px solid black;
+        }
+        .matchThreeWinner{
+          position: absolute;
+          bottom: 50%;
+          left: 40%;
+          width: 20%;
+          text-align: center;
+        }
       }
-      .playerOne{
-        position: absolute;
-        bottom: 95%;
-        width: 20%;
-        text-align: center;
+      .winner{
+        width: 15%;
+        height: 100%;
+        position: relative;
+        margin: 3% 0%;
+        .tourneyWinner{
+          border-bottom: 1px solid black;
+          position: absolute;
+          top: 50%;
+          width: 100%;
+        }
+        .champion{
+          position: absolute;
+          bottom: 50%;
+          width: 100%;
+          text-align: center;
+        }
       }
-      .playerTwo{
-        position: absolute;
-        bottom: 65%;
-        width: 20%;
-        text-align: center;
-      }
-      .matchTwo{
-        position: absolute;
-        top: 65%;
-        width: 20%;
-        height: 30%;
-        border-right: 1px solid black;
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
-      }
-      .playerThree{
-        position: absolute;
-        bottom: 35%;
-        width: 20%;
-        text-align: center;
-      }
-      .playerFour{
-        position: absolute;
-        bottom: 5%;
-        width: 20%;
-        text-align: center;
-      }
-      .matchThree{
-        position: absolute;
-        top: 20%;
-        left: 20%;
-        width: 20%;
-        height: 60%;
-        border-right: 1px solid black;
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
-      }
-      .matchOneWinner{
-        position: absolute;
-        bottom: 80%;
-        left: 20%;
-        width: 20%;
-        text-align: center;
-      }
-      .matchTwoWinner{
-        position: absolute;
-        bottom: 20%;
-        left: 20%;
-        width: 20%;
-        text-align: center;
-      }
-      .sideWinner{
-        position: absolute;
-        top: 50%;
-        left: 40%;
-        width: 20%;
-        border-bottom: 1px solid black;
-      }
-      .matchThreeWinner{
-        position: absolute;
-        bottom: 50%;
-        left: 40%;
-        width: 20%;
-        text-align: center;
+      .sideTwo{
+        width: 35%;
+        height: 100%;
+        position: relative;
+        margin: 3% 0%;
+        .matchOne{
+          position: absolute;
+          top: 5%;
+          right: 0%;
+          width: 20%;
+          height: 30%;
+          border-left: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .playerOne{
+          position: absolute;
+          bottom: 95%;
+          right: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .playerTwo{
+          position: absolute;
+          bottom: 65%;
+          right: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchTwo{
+          position: absolute;
+          top: 65%;
+          right: 0%;
+          width: 20%;
+          height: 30%;
+          border-left: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .playerThree{
+          position: absolute;
+          bottom: 35%;
+          right: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .playerFour{
+          position: absolute;
+          bottom: 5%;
+          right: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchThree{
+          position: absolute;
+          top: 20%;
+          right: 20%;
+          width: 20%;
+          height: 60%;
+          border-left: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .matchOneWinner{
+          position: absolute;
+          bottom: 80%;
+          right: 20%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchTwoWinner{
+          position: absolute;
+          bottom: 20%;
+          right: 20%;
+          width: 20%;
+          text-align: center;
+        }
+        .sideWinner{
+          position: absolute;
+          top: 50%;
+          right: 40%;
+          width: 20%;
+          border-bottom: 1px solid black;
+        }
+        .matchThreeWinner{
+          position: absolute;
+          bottom: 50%;
+          right: 40%;
+          width: 20%;
+          text-align: center;
+        }
       }
     }
-    .winner{
-      width: 15%;
-      height: 100%;
-      position: relative;
-      margin: 3% 0%;
-      .tourneyWinner{
-        border-bottom: 1px solid black;
-        position: absolute;
-        top: 50%;
-        width: 100%;
+
+
+    .bracketOfSixteen{
+      width: 100%;
+      height: 70%;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      .sideOne{
+        width: 35%;
+        height: 100%;
+        position: relative;
+        margin: 3% 0%;
+        .matchOne{
+          position: absolute;
+          top: 5%;
+          left: 0%;
+          width: 20%;
+          height: 15%;
+          border-right: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .playerOne{
+          position: absolute;
+          bottom: 95%;
+          left: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .playerTwo{
+          position: absolute;
+          bottom: 80%;
+          left: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchTwo{
+          position: absolute;
+          top: 30%;
+          left: 0%;
+          width: 20%;
+          height: 15%;
+          border-right: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .playerThree{
+          position: absolute;
+          bottom: 70%;
+          left: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .playerFour{
+          position: absolute;
+          bottom: 55%;
+          left: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchThree{
+          position: absolute;
+          top: 55%;
+          left: 0%;
+          width: 20%;
+          height: 15%;
+          border-right: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .playerFive{
+          position: absolute;
+          bottom: 45%;
+          left: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .playerSix{
+          position: absolute;
+          bottom: 30%;
+          left: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchFour{
+          position: absolute;
+          top: 80%;
+          left: 0%;
+          width: 20%;
+          height: 15%;
+          border-right: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .playerSeven{
+          position: absolute;
+          bottom: 20%;
+          left: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .playerEight{
+          position: absolute;
+          bottom: 5%;
+          left: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchFive{
+          position: absolute;
+          top: 10%;
+          left: 20%;
+          width: 20%;
+          height: 30%;
+          border-right: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .matchOneWinner{
+          position: absolute;
+          bottom: 90%;
+          left: 20%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchTwoWinner{
+          position: absolute;
+          bottom: 60%;
+          left: 20%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchSix{
+          position: absolute;
+          top: 60%;
+          left: 20%;
+          width: 20%;
+          height: 30%;
+          border-right: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .matchThreeWinner{
+          position: absolute;
+          bottom: 40%;
+          left: 20%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchFourWinner{
+          position: absolute;
+          bottom: 10%;
+          left: 20%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchSeven{
+          position: absolute;
+          top: 25%;
+          left: 40%;
+          width: 20%;
+          height: 50%;
+          border-right: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .matchFiveWinner{
+          position: absolute;
+          bottom: 75%;
+          left: 40%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchSixWinner{
+          position: absolute;
+          bottom: 25%;
+          left: 40%;
+          width: 20%;
+          text-align: center;
+        }
+        .sideWinner{
+          position: absolute;
+          top: 50%;
+          left: 60%;
+          width: 20%;
+          border-bottom: 1px solid black;
+        }
+        .matchSevenWinner{
+          position: absolute;
+          bottom: 50%;
+          left: 60%;
+          width: 20%;
+          text-align: center;
+        }
       }
-      .champion{
-        position: absolute;
-        bottom: 50%;
-        width: 100%;
-        text-align: center;
+      .winner{
+        width: 15%;
+        height: 100%;
+        position: relative;
+        margin: 3% 0%;
+        .tourneyWinner{
+          border-bottom: 1px solid black;
+          position: absolute;
+          top: 50%;
+          width: 100%;
+        }
+        .champion{
+          position: absolute;
+          bottom: 50%;
+          width: 100%;
+          text-align: center;
+        }
       }
-    }
-    .sideTwo{
-      width: 35%;
-      height: 100%;
-      position: relative;
-      margin: 3% 0%;
-      .matchOne{
-        position: absolute;
-        top: 5%;
-        right: 0%;
-        width: 20%;
-        height: 30%;
-        border-left: 1px solid black;
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
-      }
-      .playerOne{
-        position: absolute;
-        bottom: 95%;
-        right: 0%;
-        width: 20%;
-        text-align: center;
-      }
-      .playerTwo{
-        position: absolute;
-        bottom: 65%;
-        right: 0%;
-        width: 20%;
-        text-align: center;
-      }
-      .matchTwo{
-        position: absolute;
-        top: 65%;
-        right: 0%;
-        width: 20%;
-        height: 30%;
-        border-left: 1px solid black;
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
-      }
-      .playerThree{
-        position: absolute;
-        bottom: 35%;
-        right: 0%;
-        width: 20%;
-        text-align: center;
-      }
-      .playerFour{
-        position: absolute;
-        bottom: 5%;
-        right: 0%;
-        width: 20%;
-        text-align: center;
-      }
-      .matchThree{
-        position: absolute;
-        top: 20%;
-        right: 20%;
-        width: 20%;
-        height: 60%;
-        border-left: 1px solid black;
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
-      }
-      .matchOneWinner{
-        position: absolute;
-        bottom: 80%;
-        right: 20%;
-        width: 20%;
-        text-align: center;
-      }
-      .matchTwoWinner{
-        position: absolute;
-        bottom: 20%;
-        right: 20%;
-        width: 20%;
-        text-align: center;
-      }
-      .sideWinner{
-        position: absolute;
-        top: 50%;
-        right: 40%;
-        width: 20%;
-        border-bottom: 1px solid black;
-      }
-      .matchThreeWinner{
-        position: absolute;
-        bottom: 50%;
-        right: 40%;
-        width: 20%;
-        text-align: center;
+      .sideTwo{
+        width: 35%;
+        height: 100%;
+        position: relative;
+        margin: 3% 0%;
+        .matchOne{
+          position: absolute;
+          top: 5%;
+          right: 0%;
+          width: 20%;
+          height: 15%;
+          border-left: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .playerOne{
+          position: absolute;
+          bottom: 95%;
+          right: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .playerTwo{
+          position: absolute;
+          bottom: 80%;
+          right: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchTwo{
+          position: absolute;
+          top: 30%;
+          right: 0%;
+          width: 20%;
+          height: 15%;
+          border-left: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .playerThree{
+          position: absolute;
+          bottom: 70%;
+          right: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .playerFour{
+          position: absolute;
+          bottom: 55%;
+          right: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchThree{
+          position: absolute;
+          top: 55%;
+          right: 0%;
+          width: 20%;
+          height: 15%;
+          border-left: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .playerFive{
+          position: absolute;
+          bottom: 45%;
+          right: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .playerSix{
+          position: absolute;
+          bottom: 30%;
+          right: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchFour{
+          position: absolute;
+          top: 80%;
+          right: 0%;
+          width: 20%;
+          height: 15%;
+          border-left: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .playerSeven{
+          position: absolute;
+          bottom: 20%;
+          right: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .playerEight{
+          position: absolute;
+          bottom: 5%;
+          right: 0%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchFive{
+          position: absolute;
+          top: 10%;
+          right: 20%;
+          width: 20%;
+          height: 30%;
+          border-left: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .matchOneWinner{
+          position: absolute;
+          bottom: 90%;
+          right: 20%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchTwoWinner{
+          position: absolute;
+          bottom: 60%;
+          right: 20%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchSix{
+          position: absolute;
+          top: 60%;
+          right: 20%;
+          width: 20%;
+          height: 30%;
+          border-left: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .matchThreeWinner{
+          position: absolute;
+          bottom: 40%;
+          right: 20%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchFourWinner{
+          position: absolute;
+          bottom: 10%;
+          right: 20%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchSeven{
+          position: absolute;
+          top: 25%;
+          right: 40%;
+          width: 20%;
+          height: 50%;
+          border-left: 1px solid black;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+        }
+        .matchFiveWinner{
+          position: absolute;
+          bottom: 75%;
+          right: 40%;
+          width: 20%;
+          text-align: center;
+        }
+        .matchSixWinner{
+          position: absolute;
+          bottom: 25%;
+          right: 40%;
+          width: 20%;
+          text-align: center;
+        }
+        .sideWinner{
+          position: absolute;
+          top: 50%;
+          right: 60%;
+          width: 20%;
+          border-bottom: 1px solid black;
+        }
+        .matchSevenWinner{
+          position: absolute;
+          bottom: 50%;
+          right: 60%;
+          width: 20%;
+          text-align: center;
+        }
       }
     }
   }
+
+
+
 }
 
 .createButton {
