--- a/app/templates/liveTourney.tpl.html
+++ b/app/templates/liveTourney.tpl.html
@@ -4,49 +4,49 @@
       <div class="matchOne">
 
       </div>
-      <span class="playerOne">TJ</span>
-      <span class="playerTwo">Dom</span>
+      <span class="playerOne"></span>
+      <span class="playerTwo"></span>
       <div class="matchTwo">
 
       </div>
-      <span class="playerThree">Brit</span>
-      <span class="playerFour">Ben</span>
+      <span class="playerThree"></span>
+      <span class="playerFour"></span>
       <div class="matchThree">
 
       </div>
-      <span class="matchOneWinner">Dom</span>
-      <span class="matchTwoWinner">Brit</span>
+      <span class="matchOneWinner"></span>
+      <span class="matchTwoWinner"></span>
       <div class="sideWinner">
 
       </div>
-      <span class="matchThreeWinner">Dom</span>
+      <span class="matchThreeWinner"></span>
     </div>
     <div class="winner">
       <div class="tourneyWinner">
 
       </div>
-      <span class="champion">Dom</span>
+      <span class="champion"></span>
     </div>
     <div class="sideTwo">
       <div class="matchOne">
 
       </div>
-      <span class="playerOne">Terry</span>
-      <span class="playerTwo">Kenny</span>
+      <span class="playerOne"></span>
+      <span class="playerTwo"></span>
       <div class="matchTwo">
 
       </div>
-      <span class="playerThree">Josh</span>
-      <span class="playerFour">Will</span>
+      <span class="playerThree"></span>
+      <span class="playerFour"></span>
       <div class="matchThree">
 
       </div>
-      <span class="matchOneWinner">Terry</span>
-      <span class="matchTwoWinner">Will</span>
+      <span class="matchOneWinner"></span>
+      <span class="matchTwoWinner"></span>
       <div class="sideWinner">
 
       </div>
-      <span class="matchThreeWinner">Terry</span>
+      <span class="matchThreeWinner"></span>
     </div>
   </div>
 
@@ -56,89 +56,89 @@
       <div class="matchOne">
 
       </div>
-      <span class="playerOne">Adam</span>
-      <span class="playerTwo">Adam</span>
+      <span class="playerOne"></span>
+      <span class="playerTwo"></span>
       <div class="matchTwo">
 
       </div>
-      <span class="playerThree">Adam</span>
-      <span class="playerFour">Adam</span>
+      <span class="playerThree"></span>
+      <span class="playerFour"></span>
       <div class="matchThree">
 
       </div>
-      <span class="playerFive">Adam</span>
-      <span class="playerSix">Adam</span>
+      <span class="playerFive"></span>
+      <span class="playerSix"></span>
       <div class="matchFour">
 
       </div>
-      <span class="playerSeven">Adam</span>
-      <span class="playerEight">Adam</span>
+      <span class="playerSeven"></span>
+      <span class="playerEight"></span>
       <div class="matchFive">
 
       </div>
-      <span class="matchOneWinner">Adam</span>
-      <span class="matchTwoWinner">Adam</span>
+      <span class="matchOneWinner"></span>
+      <span class="matchTwoWinner"></span>
       <div class="matchSix">
 
       </div>
-      <span class="matchThreeWinner">Adam</span>
-      <span class="matchFourWinner">Adam</span>
+      <span class="matchThreeWinner"></span>
+      <span class="matchFourWinner"></span>
       <div class="matchSeven">
 
       </div>
-      <span class="matchFiveWinner">Adam</span>
-      <span class="matchSixWinner">Adam</span>
+      <span class="matchFiveWinner"></span>
+      <span class="matchSixWinner"></span>
       <div class="sideWinner">
 
       </div>
-      <span class="matchSevenWinner">Adam</span>
+      <span class="matchSevenWinner"></span>
     </div>
     <div class="winner">
       <div class="tourneyWinner">
 
       </div>
-      <span class="champion">Adam</span>
+      <span class="champion"></span>
     </div>
     <div class="sideTwo">
       <div class="matchOne">
 
       </div>
-      <span class="playerOne">Adam</span>
-      <span class="playerTwo">Adam</span>
+      <span class="playerOne"></span>
+      <span class="playerTwo"></span>
       <div class="matchTwo">
 
       </div>
-      <span class="playerThree">Adam</span>
-      <span class="playerFour">Adam</span>
+      <span class="playerThree"></span>
+      <span class="playerFour"></span>
       <div class="matchThree">
 
       </div>
-      <span class="playerFive">Adam</span>
-      <span class="playerSix">Adam</span>
+      <span class="playerFive"></span>
+      <span class="playerSix"></span>
       <div class="matchFour">
 
       </div>
-      <span class="playerSeven">Adam</span>
-      <span class="playerEight">Adam</span>
+      <span class="playerSeven"></span>
+      <span class="playerEight"></span>
       <div class="matchFive">
 
       </div>
-      <span class="matchOneWinner">Adam</span>
-      <span class="matchTwoWinner">Adam</span>
+      <span class="matchOneWinner"></span>
+      <span class="matchTwoWinner"></span>
       <div class="matchSix">
 
       </div>
-      <span class="matchThreeWinner">Adam</span>
-      <span class="matchFourWinner">Adam</span>
+      <span class="matchThreeWinner"></span>
+      <span class="matchFourWinner"></span>
       <div class="matchSeven">
 
       </div>
-      <span class="matchFiveWinner">Adam</span>
-      <span class="matchSixWinner">Adam</span>
+      <span class="matchFiveWinner"></span>
+      <span class="matchSixWinner"></span>
       <div class="sideWinner">
 
       </div>
-      <span class="matchSevenWinner">Adam</span>
+      <span class="matchSevenWinner"></span>
     </div>
   </div>
 </div>
