--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -732,3 +732,23 @@ html{
   display: flex;
   flex-wrap: wrap;
 }
+
+.tourneyContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 10px;
+  background: gray;
+  border: 2px solid purple;
+  border-width: 2px 0 2px 0;
+  color: purple;
+}
+
+.tourneyData {
+  color: white;
+  margin-right: 5px;
+}
+
+.tourneyDeadline{
+  color: red;
+}
