added logo and changed positions of items on navbar

--- a/app/templates/layout.tpl.html
+++ b/app/templates/layout.tpl.html
@@ -1,7 +1,11 @@
 <nav class="navbar">
-  <a class="sign-in_link link" href="/#/sign-in">Sign-in</a>
-  <a class="tournaments_link link" href="/#/tournaments">Tournaments</a>
-  <a class="link" href="/#/live-tourney">Live Tourney</a>
+  <img class="logo" src="images/pingpong-logo.png" />
+  <div class="links">
+    <a class="tournaments_link link" href="/#/tournaments">Tournaments</a>
+    <a class="link" href="/#/live-tourney">Live Tourney</a>
+    <a class="sign-in_link link" href="/#/sign-in">Sign-in</a>
+    <button class="create-account_button"><a class="link" href="/#/add-account">Create Account</a></button>
+  </div>
 </nav>
 
 <div class="wrapper" ui-view></div>
