working on layout of tournaments page

--- a/app/templates/layout.tpl.html
+++ b/app/templates/layout.tpl.html
@@ -1,5 +1,8 @@
 <nav class="navbar">
-  <img class="logo" src="images/pingpong-logo.png" />
+  <div class="logo">
+    <img class="logo-img" src="images/pingpong-logo.png" />
+    <h2 class="logo-title">Champs</h2>
+  </div>
   <div class="links">
     <a class="tournaments_link link" href="/#/tournaments">Tournaments</a>
     <a class="link" href="/#/live-tourney">Live Tourney</a>
