css for layout and sign up page

--- a/app/templates/signup.tpl.html
+++ b/app/templates/signup.tpl.html
@@ -1,9 +1,10 @@
+<img class="backdrop" src="images/sign-in-background.jpeg" />
 <div class="sign-up_container">
   <form>
     <div class="input_box">
-      <span class="username_placeholder placeholder">Username</span>  <br />
+      <span class="username_placeholder placeholder">Username:</span>  <br />
       <input class="username_input input" name="password" type="text" placeholder="Username" ng-model="user.username"/><br />
-      <span class="password_placeholder placeholder">Password</span>  <br />
+      <span class="password_placeholder placeholder">Password:</span>  <br />
       <input class="password_input input" name="password" type="password" placeholder="Password" ng-model="user.password" /><br />
       <button class="sign-in_button" ng-click="vm.loginUser(user)">Sign-in</button><br />
       <span class="or">Or</span> <br />
