--- a/app/templates/layout.tpl.html
+++ b/app/templates/layout.tpl.html
@@ -1,8 +1,8 @@
 <nav class="navbar">
-  <div class="logo">
+  <!-- <div class="logo">
     <img class="logo-img" src="images/pingpong-logo.png" />
     <h2 class="logo-title">Champs</h2>
-  </div>
+  </div> -->
   <div class="links">
     <a class="tournaments_link link" href="/#/tournaments">Tournaments</a>
     <a class="link" href="/#/live-tourney">Live Tourney</a>
