--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,8 @@
 html{
   width: 100%;
   height: 100%;
+  min-width: 450px;
+  min-height: 435px;
   body{
     width: 100%;
     height: 100%
@@ -13,15 +15,14 @@ html{
 .container{
   width: 100%;
   height: 100%;
-  // min-width: 800px;
-  // min-height: 500px;
   position: relative;
   .navbar{
     width: 100%;
-    height: 10%;
+    min-height: 10%;
+    min-width: 450px;
     background-color: #01579B;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     position: fixed;
     top: 0px;
@@ -48,8 +49,9 @@ html{
       display: flex;
       justify-content: center;
       align-items: center;
-      position: absolute;
-      right: 5%;
+      // position: absolute;
+      // right: 5%;
+      margin-right: 1%;
       .link{
         margin: 0px 10px;
         text-decoration: none;
@@ -66,7 +68,14 @@ html{
     }
   }
 
-
+  .backdrop{
+    width: 100%;
+    height: 100%;
+    min-width: 700px;
+    min-height: 700px;
+    z-index: -1;
+    opacity: .7;
+  }
   .sign-up_container{
     width: 100%;
     height: 100%;
@@ -85,9 +94,10 @@ html{
         border: 1px solid black;
         border-radius: 10px;
         padding: 20px 10px;
-        width: 25%;
+        width: 300px;
+        background-color: #01579B;
         .placeholder{
-
+          color: white
         }
         .input{
           width: 80%;
@@ -125,11 +135,13 @@ html{
     .addAccountForm{
       width: 100%;
       .add_input{
-        width: 25%;
-        margin: 10px;
+        width: 50%;
+        margin: 1.5%;
         padding: 5px;
       }
       .addAccountSubmit{
+        margin: 1%;
+        padding: 5px;
       }
     }
   }
