Cutout player inputs from tourney.tpl and updated tourney.tpl.html and tourney.controller

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -847,3 +847,13 @@ html{
 .tourneyDeadline{
   color: red;
 }
+
+.playerInputContainer{
+  background: #01579B;
+  margin-right: 5px;
+  padding: 10px;
+}
+
+.tourneyViewInputText {
+  color: white;
+}
