messing around with pulling tournaments

--- a/app/templates/liveTourney.tpl.html
+++ b/app/templates/liveTourney.tpl.html
@@ -1,5 +1,5 @@
 <div class="liveTourneyView">
-  <div class="bracketOfEight">
+  <div class="bracketOfEight" ng-show="vm.tourney.size == 8">
     <div class="sideOne">
       <div class="matchOne">
 
@@ -51,7 +51,7 @@
   </div>
 
 
-  <div class="bracketOfSixteen">
+  <div class="bracketOfSixteen" ng-show="vm.tourney.size == 16">
     <div class="sideOne">
       <div class="matchOne">
 
