finishing up all of the styling

--- a/app/templates/signup.tpl.html
+++ b/app/templates/signup.tpl.html
@@ -1,5 +1,9 @@
 <img class="backdrop" src="images/sign-in-background.jpeg" />
 <div class="sign-up_container">
+  <div class="logo">
+    <img class="logo-img" src="images/pingpong-logo.png" />
+    <h1 class="title">Pong Champs</h1>
+  </div>
   <form>
     <div class="input_box">
       <span class="username_placeholder placeholder">Username:</span>  <br />
