Fixed logo and positioned on signup.tpl

--- a/app/templates/signup.tpl.html
+++ b/app/templates/signup.tpl.html
@@ -1,9 +1,8 @@
 <img class="backdrop" src="images/sign-in-background.jpeg" />
 <div class="sign-up_container">
   <div class="logo">
-    <img class="logo-img" src="images/pingpong-logo.png" />
-    <h1 class="title">Pong Champs</h1>
   </div>
+  <h1 class="title"><img class="pongPhoto" src="./../images/pingpong-logo.png">Pong Champs</h1>
   <form>
     <div class="input_box">
       <span class="username_placeholder placeholder">Username:</span>  <br />
